# wecom-customer-service-bot

./: .gitignore  docker-compose.yml
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  redis_client.py
backend/app/after_sales/: after_sales_handler.py  order_service.py  router.py  schemas.py  ticket_service.py
backend/app/ai_engine/: intent_classifier.py  prompt_templates.py  response_generator.py  router.py  schemas.py
backend/app/analytics/: consultation_logger.py  router.py  schemas.py  stats_service.py
backend/app/auth/: jwt_handler.py  router.py
backend/app/gateway/: message_parser.py  message_sender.py  router.py  schemas.py  session_manager.py  verifier.py
backend/app/knowledge/: chunker.py  document_ingestor.py  embedding_service.py  router.py  schemas.py  vector_search.py
backend/app/models/: __init__.py  admin.py  after_sales.py  analytics.py  knowledge.py  quoting.py
backend/app/quoting/: pdf_renderer.py  quote_handler.py  quote_service.py  router.py  schemas.py
backend/app/quoting/templates/: quote_standard.html
backend/migrations/versions/: 001_knowledge_tables.py  002_quoting_tables.py  003_after_sales_tables.py  004_analytics_tables.py  005_admin_user_table.py
backend/tests/: conftest.py  test_document_ingestor.py  test_intent_classifier.py  test_message_parser.py  test_order_service.py  test_pdf_renderer.py  test_quote_service.py  test_rag_pipeline.py  test_session_manager.py  test_ticket_service.py  test_vector_search.py  test_verifier.py  test_webhook.py
docs/: design-spec.md  (+1 more)
(+18 files in other folders)
